front-end/public/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-static-deployment
  namespace: staging
  labels:
    app: frontend-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-static
  template:
    metadata:
      labels:
        app: frontend-static
    spec:
      containers:
        - name: frontend-static
          image: gcr.io/fleet-geode-253715/frontend-static:1.1
          readinessProbe:
            httpGet:
              path: /
              port: 8000
          ports:
            - containerPort: 8000
